# LLM-based-UCTframework

./: .gitignore  README.md
Exploration Testing Module/: README.md  UseCases.docx  orchestrator.py  pyproject.toml
Exploration Testing Module/DependencyGraph/: GraphBuilder.py
Exploration Testing Module/Evaluation/Scripts/: create_summary.py  evaluation_manager.py  json_structure_errors_extractor.py  json_syntax_analyzer.py  manage_evaluation.py
Exploration Testing Module/FinalOutput/: UC1.json  UC2.json  UC2_1.json  UC2_2.json  UC2_4.json  UC2_5.json  UC2_6.json  UC3_1.json  UC3_2.json  UC3_2_1.json  UC3_2_2.json  UC3_2_3.json  UC3_4_1.json  UC3_4_3.json  UC3_4_3_1.json  UC3_4_3_10.json  UC3_4_3_11.json  UC3_4_3_12.json  UC3_4_3_2.json  UC3_4_3_4.json  UC3_4_3_5.json  UC3_4_3_6.json  UC3_4_3_7.json  UC3_4_3_8.json  UC3_4_3_9.json  UC4.json  UC4_2.json  UC4_3.json
Exploration Testing Module/Generations/: ModelExecutor.py
Exploration Testing Module/Parsing/: DocxToTxt.py  README.md  UseCaseBuilderJSON.py  UseCaseGeneratorDeterministic.py  UseCaseGeneratorJSON.py  UseCaseGeneratorJSON_Batch.py  UseCaseGeneratorRUCM.py  UseCaseGeneratorTXT.py  UseCasesTXT copy.txt
Exploration Testing Module/PromptBuilder/: PromptGenerator.py  prompt_template.txt  prompt_templateFewShot.txt  prompt_templateJSON.txt  prompt_templateOneShot.txt  prompt_templateTXT.txt  prompt_templateZeroShot.txt
Exploration Testing Module/Refiner/: refiner.py
Exploration Testing Module/Repair/: refiner.py
Exploration Testing Module/TestCaseCoverage/: ChosenUseCases.txt  TestCaseCoverage(Test Case Coverage).csv  TestCaseCoverage.xlsx  complete_use_cases.txt  partial_use_cases.txt
test-code-generator/: README.md  config.yaml  configuration_analysis.xlsx  evaluation_analysis_results.xlsx  main.py  pyproject.toml  quantitative_analysis_results.xlsx  run.sh  run_batch.sh
test-code-generator/Evaluation/: baseline_to_dataset_mapping.json
test-code-generator/input_files/: reporter.js  reporter_minimal.js
test-code-generator/logs/: 20250508.txt
test-code-generator/output/: 2025403_1.txt  2025403_2.txt
test-code-generator/prompts/: one_shot.txt  one_shot_generate.txt
test-code-generator/scripts/: metrics_calculation.py
(+4031 files in other folders)
